--- a/src/app/mapas/pages/zoom-range/zoom-range.component.html
+++ b/src/app/mapas/pages/zoom-range/zoom-range.component.html
@@ -7,7 +7,13 @@
       zoom: {{ zoomLevel | number: '2.0-2' }}
       - Lng,Lat: [123,456]
     </label>
-    <input type="range" class="form-range">
+    <input type="range"
+           class="form-range"
+           [value]="zoomLevel"
+           min="0"
+           max="19"
+           (input)="zoomCambio(zoomInput.value)"
+           #zoomInput>
   </div>
 
   <div class="col-12">
