maintain array(object) of marker and color (lesson 318 course angular)

--- a/src/app/mapas/pages/marcadores/marcadores.component.html
+++ b/src/app/mapas/pages/marcadores/marcadores.component.html
@@ -5,8 +5,10 @@
   </li>
 
   <li class="list-group-item"
-      (click)="irMarcador()">
-      marker 1
+      (click)="irMarcador()"
+      *ngFor="let marcador of marcadores; let i = index"
+      [ngStyle]="{ 'background-color': marcador.color}">
+      marker {{ i + 1}}
   </li>
 </ul>
 
