implements markers FlyTo method mapbox (lesson 319 course angular)

--- a/src/app/mapas/pages/marcadores/marcadores.component.html
+++ b/src/app/mapas/pages/marcadores/marcadores.component.html
@@ -5,9 +5,11 @@
   </li>
 
   <li class="list-group-item"
-      (click)="irMarcador()"
       *ngFor="let marcador of marcadores; let i = index"
-      [ngStyle]="{ 'background-color': marcador.color}">
+      (click)="irMarcador(marcador.marker)"
+      [ngStyle]="{
+       'background-color': marcador.color
+       }">
       marker {{ i + 1}}
   </li>
 </ul>
